8369147: Various issues with new tests added by JDK-8316694
Reviewed-by: kvn, dlong